--- a/src/pages/hire.astro
+++ b/src/pages/hire.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Hire us">
   <Container>
     <div class="mb-8">
-      <div class="bg-darkblue rounded-lg h-80 md:max-h-92 overflow-hidden">
+      <div class="bg-darkblue rounded-lg md:h-80 md:max-h-92 overflow-hidden">
         <Picture
           src="class.png"
           alt="illustrationsteelpan.png"
