--- a/src/components/services.astro
+++ b/src/components/services.astro
@@ -57,7 +57,7 @@ import { Image, Picture } from "@astrojs/image/components";
     >
       <div class="bg-darkblue rounded-lg">
         <Picture
-          src="illustrationsteelpan.png"
+          src="/illustrationsteelpan.png"
           alt="Hiring"
           sizes="(max-width: 800px) 100vw, 800px"
           widths={[200, 400, 800]}
@@ -105,7 +105,7 @@ import { Image, Picture } from "@astrojs/image/components";
     >
       <div class="bg-darkblue rounded-lg">
         <Picture
-          src="volunteer.png"
+          src="/volunteer.png"
           alt="Volunteer"
           sizes="(max-width: 800px) 100vw, 800px"
           widths={[200, 400, 800]}
