--- a/src/pages/classes.astro
+++ b/src/pages/classes.astro
@@ -9,8 +9,8 @@ import Layout from "../layouts/Layout.astro";
     <div class="mb-8">
       <div class="bg-darkblue rounded-lg md:h-80 md:max-h-92 overflow-hidden">
         <Picture
-          src="class.png"
-          alt="/about"
+          src="/class.png"
+          alt="about"
           sizes="(max-width: 1800px) 100vw, 1800px"
           widths={[200, 400, 800, 1200, 1800]}
           aspectRatio="16:9"
