--- a/src/pages/hire.astro
+++ b/src/pages/hire.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="mb-8">
       <div class="bg-darkblue rounded-lg md:h-80 md:max-h-92 overflow-hidden">
         <Picture
-          src="class.png"
+          src="/class.png"
           alt="illustrationsteelpan.png"
           sizes="(max-width: 1800px) 100vw, 1800px"
           widths={[200, 400, 800, 1200, 1800]}
