--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -10,18 +10,20 @@ import Darkmode from "./ui/darkmode.astro";
   >
     <a href="/" class="">
       <div class="flex h-27">
-        <div class="hidden md:flex items-center">
+        <div class="md:flex items-center">
           <img
             src="https://flowbite.com/docs/images/logo.svg"
             class="h-8 mr-3"
             alt="Flowbite Logo"
           />
         </div>
-        <div class="hidden md:flex flex-col tracking-wide justify-start">
-          <span class="text-md font-bold dark:text-white"
+        <div
+          class="hidden md:flex flex-col flex-nowrap tracking-wide justify-start"
+        >
+          <span class="text-md font-bold dark:text-white flex-col"
             >New World Steel Orchestra</span
           >
-          <span class="text-xs tracking-widest dark:text-white"
+          <span class="text-xs tracking-widest dark:text-white flex-col"
             >Pan Forever! Culture Before Self</span
           >
         </div>
