--- a/src/components/jumbo.astro
+++ b/src/components/jumbo.astro
@@ -24,9 +24,7 @@ import Services from "./services.astro";
     >
       Pan Forever! Culture Before Self
     </h1>
-    <p
-      class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48"
-    >
+    <p class="text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">
       At the New World World Steel Orchestra, we believe that music is a valued
       aspect of the children's learning process.
     </p>
